# dash-crypto

./: .gitignore  BTC_features.csv  app.py  cache_ADAUSDT_history.json  cache_ADAUSDT_price.json  cache_BTCUSDT_history.json  cache_BTCUSDT_price.json  cache_DOGEUSDT_history.json  cache_DOGEUSDT_price.json  cache_ETHUSDT_history.json  cache_ETHUSDT_price.json  cache_SOLUSDT_history.json  cache_SOLUSDT_price.json  environment.yml  transformer_btc.h5  transformer_build_BTC.ipynb  transformer_study.ipynb
Informer/BTC_dev/: pyproject.toml  suggestion.txt
Informer/BTC_dev/CALC/data_prep/: data_config.yaml  run_prep.py
Informer/BTC_dev/CALC/testing/: test.py
Informer/BTC_dev/CALC/training/: training.py  training.yaml  training_log.csv  training_set1.yaml
Informer/BTC_dev/data/: BTCUSDT_1h_continuous_1.csv  BTCUSDT_1h_continuous_2.csv  BTCUSDT_1h_continuous_3.csv  BTCUSDT_1h_continuous_4.csv  BTCUSDT_1h_continuous_5.csv  BTCUSDT_1h_continuous_6.csv  BTC_informer.ipynb  index.txt  informer_best.weights.h5  take_binance_data.ipynb  transformer_study_BTC.ipynb
Informer/BTC_dev/data/prepared/: BTCUSDT_1h_continuous_1.csv  BTCUSDT_1h_continuous_5.csv  BTCUSDT_1h_continuous_test.csv  BTCUSDT_1h_continuous_val.csv
Informer/BTC_dev/data/previous_test/: BTC_informer.ipynb  take_binance_data.ipynb  training_log.csv
Informer/BTC_dev/notebooks/: explore_dataset.ipynb
Informer/BTC_dev/src/Informer/data/: normalization.py  saver.py  splits.py  windowing.py
Informer/BTC_dev/src/Informer/layers/: distilling.py  encoder.py  positional_encoding.py  prediction.py
(+8 files in other folders)
